--- a/src/app/components/match-day/match-day.component.html
+++ b/src/app/components/match-day/match-day.component.html
@@ -12,6 +12,6 @@
 
     <div class="actions">
         <button type="button" class="btn create" (click)="goToCreateTeam()">Create/Edit</button>
-        <button type="button" class="btn btn-info">Preview</button>
+        <button type="button" class="btn btn-info" (click)="previewTeam()" hidden="true">Preview</button>
     </div>
 </mat-card>
