--- a/src/app/components/match-day/match-day.component.html
+++ b/src/app/components/match-day/match-day.component.html
@@ -11,7 +11,8 @@
     </div>
 
     <div class="actions">
-        <button type="button" class="btn create" (click)="goToCreateTeam()">Create/Edit</button>
+        <button type="button" class="btn create" (click)="goToCreateTeam()"
+            [disabled]="canMakeTeam()">Create/Edit</button>
         <button type="button" class="btn btn-info" (click)="previewTeam()" hidden="true">Preview</button>
     </div>
 </mat-card>
