--- a/src/app/components/create-new-team/create-new-team.component.html
+++ b/src/app/components/create-new-team/create-new-team.component.html
@@ -1,6 +1,7 @@
-<div>
+<mat-spinner *ngIf="!showTeams" style="margin: 200px auto;"></mat-spinner>
+<div *ngIf="showTeams">
     <div class="header">
-        <button mat-raised-button (click)="openDialog()"> Preview</button>
+        <button mat-raised-button (click)="openDialog()"> Save Team</button>
         <h1>Create your Team</h1>
         <div class="credits">
             <h6>
@@ -20,7 +21,6 @@
                     <div class="player-detail">
                         <input type="checkbox" [id]="item.playerId" [value]="item.name"
                             [disabled]="checkCondition(item) | async" (change)="onCheckboxChange(item)" />
-                        <!-- <div class="player-name" for> -->
                         <label [for]="item.playerId">
                             {{ item.name }}
 
