--- a/src/app/components/match-day/match-day.component.html
+++ b/src/app/components/match-day/match-day.component.html
@@ -11,8 +11,13 @@
     </div>
 
     <div class="actions">
-        <button type="button" class="btn create" (click)="goToCreateTeam()"
-            [disabled]="canMakeTeam()">Create/Edit</button>
-        <button type="button" class="btn btn-info" (click)="previewTeam()" hidden="true">Preview</button>
+        <button type="button" class="btn create" (click)="goToCreateTeam()" *ngIf="showCreateEdit">
+            Create/Edit</button>
+        <button type="button" class="btn create" (click)="openLeaderBoard()"
+            *ngIf="showLeaderBoard">LeaderBoard</button>
+        <button type="button" class="btn btn-info" (click)="previewYourTeam()" *ngIf="previewTeam">Team
+            Preview</button>
+        <button type="button" class="btn btn-light" (click)="previewYourTeam()" disabled="true" *ngIf="showComingUp">
+            Coming up</button>
     </div>
 </mat-card>
