--- a/src/app/dialogs/preview-team/preview-team-dialog.component.scss
+++ b/src/app/dialogs/preview-team/preview-team-dialog.component.scss
@@ -4,54 +4,33 @@
 
 ul {
     padding: 0 10px;
+    list-style: none;
 }
 
-p {
-    font-size: small;
-    margin: auto;
-    color: red;
-    margin-left: 20px;
+.player-preview {
+    border-top: 1px solid red;
+    border-bottom: 1px solid red;
+    display: flex;
+    flex-direction: row;
 }
 
-h3 {
-    margin: auto;
+.title {
     text-align: center;
-    margin-bottom: 10px;
-}
-
-.player-detail {
+    font-size: large;
+    padding-bottom: 20px;
+    color: #d73f3f;
     display: flex;
     flex-direction: row;
-    padding: 3px;
-    border: 1px solid red;
-    margin: 2px;
-    border-radius: 15px;
-    background: aliceblue;
 }
 
-label {
-    flex-grow: 1;
+h6 {
+    margin: auto 0px !important;
 }
 
-input {
-    margin-right: 2px;
-    margin-left: 10px;
+.captain {
+    color: rgb(14 53 217);
 }
 
-.vc {
-    margin-right: 10px;
-}
-
-.save-team {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-button {
-    background-color: red;
-}
-
-.mat-mdc-raised-button:not(:disabled) {
-    background-color: #60eeee;
+.vcaptain {
+    color: rgb(62, 73, 202);
 }
