--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
         <h2>Login! 👋</h2>
         <form class="form-signin login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <label for="phone">Phone</label>
-            <input type="text" id="phone" name="phone" placeholder="test@atheros.ai" formControlName="phone">
+            <input type="text" id="phone" name="phone" placeholder="9876543210" formControlName="phone">
             <label for="password">Password</label>
             <input type="password" id="password" name="password" placeholder="******" formControlName="password">
             <button type="submit" class="btn btn-signin">Sign In</button>
