--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -8,27 +8,26 @@
         <form class="form-signin login-form" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
 
             <label for="username">Username</label>
-            <input type="username" id="username" name="username" placeholder="test@atheros.ai" maxlength="10"
+            <input type="username" id="username" name="username" placeholder="username..." maxlength="10"
                 formControlName="username">
             <div *ngIf="isFieldInvalid('username')" class="error">
                 <small *ngIf="signupForm.get('username')?.hasError('required')">Username is required</small>
             </div>
 
             <label for="name">Full Name</label>
-            <input type="name" id="name" name="name" placeholder="test@atheros.ai" formControlName="fullName">
+            <input type="name" id="name" name="name" placeholder="Full Name..." formControlName="fullName">
             <div *ngIf="isFieldInvalid('fullName')" class="error">
                 <small *ngIf="signupForm.get('fullName')?.hasError('required')">Name is required</small>
             </div>
 
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="test@atheros.ai" formControlName="email">
+            <input type="email" id="email" name="email" placeholder="team@IFL.com" formControlName="email">
             <div *ngIf="isFieldInvalid('email')" class="error">
                 <small *ngIf="signupForm.get('email')?.hasError('required')">Email is required</small>
             </div>
 
             <label for="phone">Phone</label>
-            <input type="phone" id="phone" name="phone" placeholder="test@atheros.ai" maxlength="10"
-                formControlName="phone">
+            <input type="phone" id="phone" name="phone" placeholder="9876543210" maxlength="10" formControlName="phone">
             <div *ngIf="isFieldInvalid('phone')" class="error">
                 <small *ngIf="signupForm.get('phone')?.hasError('required')">Phone is required</small>
             </div>
