--- a/src/app/components/match-day/match-day.component.scss
+++ b/src/app/components/match-day/match-day.component.scss
@@ -3,9 +3,23 @@
     border-radius: 15px;
     margin: 10px;
     padding: 10px;
+    height: 250px;
     width: 350px;
     background-color: rgb(216, 17, 17);
     color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+mat-card-title {
+    height: 30px;
+}
+
+.matches {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .matchinfo {
@@ -14,7 +28,7 @@
 }
 
 .mat-mdc-card-title {
-    margin: auto;
+    margin: 2px auto;
 }
 
 h1 {
